# bcv_exchange_rates_api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/core/: config.py  db.py
docs/: parsing_historic.md
scripts/: update_historic.py
