[project]
name = "bcv-exchange-rates-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.43",
    "xlrd>=2.0.2",
]
